References https://mariadb.atlassian.net/browse/MDEV-4185 - thread terminate was blocked for non-wsrep threads